--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JENKINS_URL=http://http://34.1.140.94:8080
+JENKINS_URL=http://34.1.140.94:8080
 JENKINS_USER=admin
 JENKINS_TOKEN=11e4e12bb296d42f7aef8df058a1de0374
 PORT=3000
