--- a/k8s/testing-api-deploy.yaml
+++ b/k8s/testing-api-deploy.yaml
@@ -18,7 +18,7 @@ spec:
         app: TestWeb
     spec:
       containers:
-      - image: ${DOCKER_USER}/${imageName}:${imageVersion}
+      - image: ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VERSION}
         name: testingapi
         resources: {}
       tolerations:
