--- a/k8s/TestWebdeploy.yaml
+++ b/k8s/TestWebdeploy.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - image: ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VERSION}
-        name: testingapi
+        name: TestWeb
         resources: {}
       tolerations:
       - key: "node-role.kubernetes.io/control-plane"
