--- a/k8s/TestWebSVC.yaml
+++ b/k8s/TestWebSVC.yaml
@@ -3,8 +3,8 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: TestWeb
-  name: TestWeb
+    app: testweb
+  name: testweb
 spec:
   type: NodePort
   ports:
@@ -13,6 +13,6 @@ spec:
     targetPort: 80
     nodePort: 30809
   selector:
-    app: TestWeb
+    app: testweb
 status:
   loadBalancer: {}
