--- a/k8s/TestWebdeploy.yaml
+++ b/k8s/TestWebdeploy.yaml
@@ -17,3 +17,7 @@ spec:
       containers:
       - image: ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VERSION}
         name: testweb
+      tolerations:
+      - key: "node-role.kubernetes.io/control-plane"
+        operator: "Exists"
+        effect: "NoSchedule"
