--- a/k8s/TestWebSVC.yaml
+++ b/k8s/TestWebSVC.yaml
@@ -11,6 +11,9 @@ spec:
   - port: 80
     protocol: TCP
     targetPort: 80
+  - port: 3000
+    protocol: TCP
+    targetPort: 3000
     nodePort: 30803
   selector:
     app: testweb
