--- a/k8s/TestWebdeploy.yaml
+++ b/k8s/TestWebdeploy.yaml
@@ -17,6 +17,8 @@ spec:
       containers:
       - image: ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VERSION}
         name: testweb
+        ports:
+        - containerPort: 3000
         envFrom:
         - secretRef:
             name: jenkins-credentials
