--- a/k8s/TestWebSVC.yaml
+++ b/k8s/TestWebSVC.yaml
@@ -8,9 +8,9 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 80
+  # - port: 80
+  #   protocol: TCP
+  #   targetPort: 80
   - port: 3000
     protocol: TCP
     targetPort: 3000
