--- a/k8s/TestWebdeploy.yaml
+++ b/k8s/TestWebdeploy.yaml
@@ -15,7 +15,7 @@ spec:
         app: testweb
     spec:
       containers:
-      - image: ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VERSION}
+      - image: ${IMAGE_TAG}
         name: testweb
         ports:
         - containerPort: 3000
